# CPP_Project_Template

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
ProjectName/: CMakeLists.txt  run.sh
ProjectName/include/ProjectName/: Foo.h
ProjectName/src/: CMakeLists.txt  Foo.cpp  main.cpp
include/: Foo.h
src/: CMakeLists.txt  Foo.cpp
test/: CMakeLists.txt  FooTests.cpp
